--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -7,11 +7,19 @@ RUN apt-get update \
     && apt-get install -y \
         autoconf \
         git \
+        zip \
+        unzip \
+        zlib1g-dev \
+        libssl-dev \
+        libpng-dev \
+        libzip-dev \
     && useradd -m mic
 RUN docker-php-ext-install \
+        gd \
         mysqli \
         pdo_mysql \
-        pdo
+        pdo \
+        zip
 WORKDIR /minhas-importacoes-crawler
 
 RUN chown -R mic:mic /minhas-importacoes-crawler
